<resources>
  <string name="app_name">FitCare</string>
  <string name="back4app_server_url">https://fitcareplus.back4app.io</string>
  <string name="back4app_app_id">K2X23TQtwmdx6g5jFORG7bApV6bCqccbFrll2Lfs</string>
  <string name="back4app_client_key">ZIkLbUcHQCm3I2DbXK6lab64WrgyInFV62jds3cQ</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>

  <string name="nav_header_communicate">Dúvidas?</string>
  <string name="nav_header_desc">Navigation header</string>

  <string name="menu_home">Início</string>
  <string name="menu_user">Minha conta</string>
  <string name="menu_send">Contate-nos</string>
  <string name="menu_connection">Conectar dispositivo</string>
  <string name="myPacients">Meus pacientes</string>
  <string name="addNewPacient">Novo paciente</string>

  <string name="username">Usuário</string>
  <string name="name">Nome</string>
  <string name="email">E-mail</string>
  <string name="password">Senha</string>
  <string name="btnLogin">Acessar</string>
  <string name="forgotPassword">Esqueceu sua senha?</string>
  <string name="btnForgotPassword">Trocar senha</string>
  <string name="edtViewError">Preencha esse campo!</string>
  <string name="edtEmailIncorrectFormat">Formato de e-mail incorreto!</string>
  <string name="errorLoginParse">Usuário/senha não coincidem!</string>

  <string name="welcomeText">Bem-vindo,</string>
  <string name="welcomeDescriptionText">Acessa a sua conta para continuar</string>

  <string name="instructionsForgotPassword">Insira seu e-mail no campo abaixo para que as instruções sejam enviadas.</string>
  <string name="sendForgotPassword">Enviar</string>
  <string name="invalidResetPassword">E-mail não enviado!</string>
  <string name="positiveFeedback">Ok!</string>
  <string name="textEmailVerificationSent">As instruções foram enviadas para sua caixa de entrada!</string>
  <string name="textEmailVerificationNotSent">Algo deu errado. Tente novamente mais tarde!</string>
  <string name="validResetPassword">E-mail enviado</string>
    <string name="bluetooth_active">Conectado:  </string>
  <string name="devices">Dispositivos</string>
    <string name="deviceDoesntSupportBluetooth">O dispositivo não suporta Bluetooth</string>
  <string name="contactSupportTeam">Fale conosco</string>
  <string name="notAbleToConnect">Não foi possível conectar</string>
  <string name="btnChangePhoto">Trocar foto</string>

  <string name="select_device">Selecione um dispositivo:</string>
  <string name="temperatura">Temperatura</string>
  <string name="pulse">Pulso</string>
  <string name="measure">Medir</string>
  <string name="unavailable">Indisponível</string>
  <string name="device">Dispositivo</string>
  <string name="disconnected">Desconectado</string>
</resources>

