<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/home_24dp"
      android:title="@string/menu_home" />
    <item
      android:id="@+id/nav_user_details"
      android:icon="@drawable/account_24dp"
      android:title="@string/menu_user" />
    <item
      android:id="@+id/nav_connections"
      android:icon="@drawable/ic_bluetooth_24dp"
      android:title="@string/menu_connection" />
  </group>

  <item android:title="@string/nav_header_communicate">
    <menu>
      <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_send" />
    </menu>
  </item>
</menu>
