<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginScreen">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="120dp">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="50dp"
      android:paddingTop="10dp"
      android:paddingRight="50dp">

      <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textColor="#000000"
        android:textSize="21sp"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/txtWelcomeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWelcome"
        android:textColor="#858181"
        android:text="@string/welcomeDescriptionText" />

    </RelativeLayout>


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="50dp"
      android:paddingTop="50dp"
      android:paddingRight="50dp">

      <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

      <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:height="50dp"
        android:ems="10"
        android:inputType="" />

      <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUsername"
        android:layout_marginTop="25dp"
        android:text="@string/password" />

      <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPassword"
        android:height="50dp"
        android:ems="10"
        android:inputType="textPassword" />

      <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_marginTop="40dp"
        android:height="50dp"
        android:background="@color/colorAccent"
        android:text="@string/btnLogin"
        android:textColor="@color/colorPrimaryDark" />

      <Button
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/forgotPassword"
        android:textAllCaps="true"
        android:textColor="#80555353"
        android:textSize="15sp"
        android:background="@android:color/transparent"
        android:textStyle="bold" />

      <ImageView
          android:id="@+id/btnAboutUs"
          android:layout_width="73dp"
          android:layout_height="61dp"
          android:layout_below="@id/txtForgotPassword"
          android:layout_alignEnd="@+id/txtForgotPassword"
          android:layout_marginTop="54dp"
          android:layout_marginEnd="0dp"
          app:srcCompat="@drawable/aboutuspage" />

    </RelativeLayout>
  </LinearLayout>

</ScrollView>
